--- a/Manual.ipynb
+++ b/Manual.ipynb
@@ -9,7 +9,13 @@
    "source": [
     "# ANUBIS\n",
     "\n",
+    " \n",
+    "- **Authors:** Miravet-Verde, Samuel\n",
+    "- **Last update:** 04/29/2020 (MM/DD/YYYY)\n",
+    "\n",
+    "\n",
     "ANUBIS is a Python framework to analyze Tn-seq data.\n",
+    "\n",
     "\n",
     "----\n",
     "\n",
@@ -51,7 +57,9 @@
     "\n",
     "----\n",
     "\n",
-    "## Manual<a class=\"anchor\" id=\"man\"></a>"
+    "## Manual<a class=\"anchor\" id=\"man\"></a>\n",
+    "\n",
+    "### Load a dataset"
    ]
   },
   {
